--- a/index.html
+++ b/index.html
@@ -31,21 +31,15 @@
         </svg>
 
         <div class="wrong-letters-container">
-            <div id="wrong-letters">
-                <p>Wrong</p>
-                <span>e, r, t, y</span>
-            </div>
+            <div id="wrong-letters"></div>
         </div>
-        <div class="word" id="word">
-            <div class="letter">h</div>
-            <div class="letter">e</div>
-            <div class="letter">l</div>
-            <div class="letter">l</div>
-            <div class="letter">o</div>
+
+        <div class="word" id="word"></div>
         </div>
+
         <div class="popup-container" id="popup-container">
             <div class="popup">
-                <h2 id="final-message">You Have Won</h2>
+                <h2 id="final-message"></h2>
                 <button id="play-button">Play Again</button>
             </div>
         </div>
@@ -54,6 +48,6 @@
     <div class="notification-container" id="notification-container">
         <p>You have already entered this letter</p>
     </div>
+    <script src="script.js"></script>
 </body>
-
 </html>
